test/expr/capture/noescape-error.code
// RUN: %target-typecheck-verify-language

class C {}
class D {}

fn f1(f : (inout Int) -> ()) {}

fn f2(f : (inout Any) -> ()) {
    f1 { f(&$0) } // expected-error{{inout argument could be set to a value with a type other than 'Int'; use a value declared as type 'Any' instead}}
}
